--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 </head>
 
 <body>
-<p> frick</p>
+    <div class="container">
+        <div class="nav">
+
+        </div>
+        <div class="spacer">
+
+        /div>
+        <div class="work">
+
+        </div>
+    </div>
 </body>
 </html>
