--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <head>
     <meta charset="utf-8">
     <title>Owen Cheung</title>
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 
 <body>
-    <p>hire me pls lol xD</p>
     <div class="container">
-        <div class="nav">
 
-        </div>
-        <div class="spacer">
+            <div class="nav">
+                <div class="logo">
+                    <p>Owen Cheung</p>
+                </div>
+                <div class="links">
+                    <p>Work</p>
+                    <span class="dash"></span>
+                    <p>Info</p>
+                </div>
+            </div>
 
-        </div>
-        <div class="work">
-
+            <div class="work">
+            </div>
         </div>
     </div>
 </body>
