--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                     <p>Owen Cheung</p>
                 </div>
                 <div class="links">
-                    <p>Work</p>
+                    <a href="index.html">Work</a>
                     <span class="dash"></span>
-                    <p>Info</p>
+                    <a href="">Info</a>
                 </div>
             </div>
 
