--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
             <div class="nav">
                 <div class="logo">
-                    <p>Owen Cheung</p>
+                    <a href="index.html">Owen Cheung</a>
                 </div>
                 <div class="links">
                     <a href="index.html">Work</a>
