--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 
 <body>
     <div class="container">
-
             <div class="nav">
-                <div class="logo">
-                    <a href="index.html">Owen Cheung</a>
-                </div>
-                <div class="links">
-                    <a href="index.html">Work</a>
-                    <span class="dash"></span>
-                    <a href="">Info</a>
+                <div class="nav-container">
+                    <div class="logo">
+                        <a href="index.html">Owen Cheung</a>
+                    </div>
+                    <div class="links">
+                        <a href="">Work</a>
+                        <span class="dash"></span>
+                        <a href="">Info</a>
+                    </div>
                 </div>
             </div>
-
             <div class="work">
+                
             </div>
         </div>
     </div>
