typing animation test

--- a/index.html
+++ b/index.html
@@ -3,25 +3,33 @@
     <meta charset="utf-8">
     <title>Owen Cheung</title>
     <link rel="stylesheet" href="dist/main.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
     <div class="container">
-            <div class="nav">
-                <div class="nav-container">
-                    <div class="logo">
-                        <a href="index.html">Owen Cheung</a>
-                    </div>
-                    <div class="links">
-                        <a href="">Work</a>
-                        <span class="dash"></span>
-                        <a href="">Info</a>
-                    </div>
+        <div class="nav">
+            <div class="nav-container">
+                <div class="logo">
+                    <a href="index.html">Owen Cheung</a>
+                </div>
+                <div class="links">
+                    <a href="">Work</a>
+                    <span class="dash"></span>
+                    <a href="">Info</a>
                 </div>
             </div>
-            <div class="work">
-                
+        </div>
+        <div class="intro">
+            <div class="intro-container">
+                <p class="text">
+                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi! I’m Owen", "I like design and code" ]'>
+                    <span class="wrap"></span>
+                    </a>
+                </p>
             </div>
+        </div>
+        <div class="work">
         </div>
     </div>
 </body>
