deleted typing thing

--- a/index.html
+++ b/index.html
@@ -20,17 +20,8 @@
                 </div>
             </div>
         </div>
-        <div class="intro">
-            <div class="intro-container">
-                <p class="text">
-                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi! I’m Owen", "I like design and code" ]'>
-                    <span class="wrap"></span>
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="work">
-        </div>
+        <div class="test"></div>
+        <div class="work"></div>
     </div>
 </body>
 </html>
